--- a/force-app/main/default/lwc/parentComponent/parentComponent.html
+++ b/force-app/main/default/lwc/parentComponent/parentComponent.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card>
+    <lightning-card class="saurabh">
         <lightning-button label="Chlyea Suru Krte hai" onclick={openModal}></lightning-button>
         
         <template if:true={isModalOpen}>
