--- a/force-app/main/default/lwc/caseToLead/caseToLead.html
+++ b/force-app/main/default/lwc/caseToLead/caseToLead.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card title="Case Information">
+    <!--lightning-card title="Case Information">
         <template if:true={caseData}>
             <div class="slds-p-around_medium">
                 <p><strong>Case ID:</strong> {caseData.Id.value}</p>
@@ -13,5 +13,5 @@
                 <p>Error loading case data: {error}</p>
             </div>
         </template>
-    </lightning-card>
+    </lightning-card-->
 </template>
