--- a/force-app/main/default/lwc/caseToLead/caseToLead.html
+++ b/force-app/main/default/lwc/caseToLead/caseToLead.html
@@ -1,35 +1,30 @@
 <template>
-    <!-- <template if:true={caseData}>
-        <lightning-card title="Case Information">
+    <template if:true={actionMessage}>
+        <lightning-card title="Lead Information" icon-name="utility:record_create">
             <div class="slds-p-around_medium">
-                <p>><strong>{caseStatusMessage}></strong></p>
+                <div class="slds-text-align_center slds-text-heading_medium">
+                    <template if:true={isSuccess}>
+                        <lightning-icon
+                            icon-name="utility:success"
+                            size="large"
+                            alternative-text="Success"
+                            class="slds-m-bottom_small">
+                        </lightning-icon>
+                        <div class="message-container" lwc:dom="manual"></div>
+                    </template>
+                    <template if:false={isSuccess}>
+                        <lightning-icon
+                            icon-name="utility:error"
+                            size="large"
+                            alternative-text="Error"
+                            class="slds-m-bottom_small">
+                        </lightning-icon>
+                        <p>
+                            <strong>{actionMessage}</strong>
+                        </p>
+                    </template>
+                </div>
             </div>
         </lightning-card>
     </template>
-
-    <template if:true={error}>
-        <div class="slds-p-around_medium">
-            <p>Error loading case data: {errorMessage}</p>
-        </div>
-    </template> -->
-
-    <template if:true={actionMessage}> 
-    <!-- Lead Information card with success or error message -->
-    <lightning-card title="Lead Information" icon-name="utility:record_create">
-        <div class="slds-p-around_medium">
-            <div class="slds-text-align_center slds-text-color_success slds-text-heading_medium">
-                <!-- Use a strong message with an icon based on the outcome -->
-                <template if:true={isSuccess}>
-                    <lightning-icon icon-name="utility:success" size="large" alternative-text="Success" class="slds-m-bottom_small"></lightning-icon>
-                    <p><strong>{actionMessage}</strong></p>
-                </template>
-                <template if:false={isSuccess}>
-                    <lightning-icon icon-name="utility:error" size="large" alternative-text="Error" class="slds-m-bottom_small"></lightning-icon>
-                    <p><strong>{actionMessage}</strong></p>
-                </template>
-            </div>
-        </div>
-    </lightning-card>
-</template>
-
 </template>
