--- a/force-app/main/default/lwc/flightBookingDetails/flightBookingDetails.html
+++ b/force-app/main/default/lwc/flightBookingDetails/flightBookingDetails.html
@@ -1,22 +1,32 @@
 <template>
-    <template if:true={showModal}>
-        <div class="slds-modal slds-fade-in-open">
-            <div class="slds-modal__container">
-                <header class="slds-modal__header">
-                    <h2 class="slds-text-heading_medium">Will get the details from opportunity and show here</h2>
-                    <button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
-                        title="Close" onclick={closeModal}>
-                        <lightning-icon icon-name="utility:close" alternative-text="close" size="small"></lightning-icon>
-                    </button>
-                </header>
-                <div class="slds-modal__content slds-p-around_medium">
-                    <!-- Your modal content here -->
+        <template if:true={showModal}>
+        <lightning-card title="Flight Details">
+            <div class="header-fields">
+                <div class="field">
+                    <label class="field-label">Service At Airport </label>
+                    <span class="field-value">DEL</span>
                 </div>
-                <footer class="slds-modal__footer">
-                    <button class="slds-button slds-button_neutral" onclick={closeModal}>Close</button>
-                </footer>
+                <div class="field">
+                    <label class="field-label">Airline and Flight Number </label>
+                    <span class="field-value">UK 554</span>
+                </div>
+                <div class="field">
+                    <label class="field-label">Flight Date And Time </label>
+                    <span class="field-value">30-Nov-2024, 10:00 PM</span>
+                </div>
+                <div class="field">
+                    <label class="field-label">Service Date And Time </label>
+                    <span class="field-value">30-Nov-2024, 09:00 PM</span>
+                </div>
+                <div class="field">
+                    <label class="field-label">Number of Guests </label>
+                    <span class="field-value">Adult 1</span>
+                </div>
             </div>
-        </div>
-        <div class="slds-backdrop slds-backdrop_open"></div>
-    </template>
+        </lightning-card>
+                <footer class="slds-modal__footer">
+                    <lightning-button label="Previous" class="encalmbg" variant="brand" onclick={closeModal} style="margin-right: 10px;"></lightning-button>
+                    <lightning-button label="Next" class="encalmbg" variant="brand" onclick={closeModal}></lightning-button>
+                </footer>
+        </template>
 </template>
