--- a/force-app/main/default/lwc/caseToLead/caseToLead.html
+++ b/force-app/main/default/lwc/caseToLead/caseToLead.html
@@ -1,11 +1,11 @@
 <template>
     <template if:true={actionMessage}>
-        <lightning-card title="Lead Information" icon-name="utility:record_create">
+        <lightning-card>
             <div class="slds-p-around_medium">
                 <div class="slds-text-align_center slds-text-heading_medium">
                     <template if:true={isSuccess}>
                         <lightning-icon
-                            icon-name="utility:success"
+                            icon-name="action:approval"
                             size="large"
                             alternative-text="Success"
                             class="slds-m-bottom_small">
@@ -14,7 +14,7 @@
                     </template>
                     <template if:false={isSuccess}>
                         <lightning-icon
-                            icon-name="utility:error"
+                            icon-name="action:close"
                             size="large"
                             alternative-text="Error"
                             class="slds-m-bottom_small">
