--- a/force-app/main/default/lwc/customerDetails/customerDetails.html
+++ b/force-app/main/default/lwc/customerDetails/customerDetails.html
@@ -39,7 +39,7 @@
 		<div class="slds-grid slds-wrap custNameMarginCSS">
 			<div class="slds-size_2-of-2">
 				<div class="slds-box_x-small slds-text-align_center slds-m-around_x-small">
-					Total No. of Bookings: <span class="custNameCSS">3</span>
+					Total No. of Bookings: <span class="custNameCSS">{totalOpportunities}</span>
 				</div>
 			</div>
 		</div>
@@ -47,14 +47,14 @@
 		<div class="slds-grid slds-wrap custNameMarginCSS">
 			<div class="slds-size_2-of-2">
 				<div class="slds-box_x-small slds-text-align_center slds-m-around_x-small">
-					Total Cases Reports: <span class="custNameCSS">1</span>
+					Total Cases Reports: <span class="custNameCSS">{totalCases}</span>
 				</div>
 			</div>
 		</div>
 		<div class="slds-grid slds-wrap custNameMarginCSS">
 			<div class="slds-size_2-of-2">
 				<div class="slds-box_x-small slds-text-align_center slds-m-around_x-small">
-					Total Leads Reports: <span class="custNameCSS">2</span>
+					Total Leads Reports: <span class="custNameCSS">{totalLeads}</span>
 				</div>
 			</div>
 		</div>
@@ -62,7 +62,7 @@
 		<div class="slds-grid slds-wrap custNameMarginCSS">
 			<div class="slds-size_2-of-2">
 				<div class="slds-box_x-small slds-text-align_center slds-m-around_x-small">
-					Preferred Route: <span class="custNameCSS">DEL-BOM</span>
+					Preferred Route: <span class="custNameCSS">N/A</span>
 				</div>
 			</div>
 		</div>
